--- a/test/Feature_Import_Feature_Files.cls
+++ b/test/Feature_Import_Feature_Files.cls
@@ -2,13 +2,11 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "TFeatureTemplate"
+Attribute VB_Name = "Feature_Import_Feature_Files"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-'this is a template for new example driven tests
-
 Option Explicit
 
 'separate tags by comma, e.g.: "wip,debug,production"
@@ -18,8 +16,8 @@ Dim m_description As String
 Public Property Get Description() As String
     
     If m_description = vbNullString Then
-        m_description = "Add a description" & vbLf _
-                            & "to explain your features purpose."
+        m_description = "Senfgurke will import examples from feature files" & vbLf _
+                            & "containing feature name and descripion, rules and examples as text."
     End If
     Description = m_description
 End Property
@@ -31,14 +29,21 @@ Public Property Get Examples() As Collection
     Dim example As Variant
 
     Set examples_list = New Collection
-    example = Array("Rule: specify a rule to classify the following examples_list")
+    example = Array("Rule: use the features dir beneath the current dir of the document containing the step implementation")
     examples_list.Add example
-    example = Array("Example: add a headline to identify this example", _
-                        "Given a precondition", _
-                        "And another precondition", _
-                        "When any action happens", _
-                        "Then some result is expected")
+    example = Array("Example: derive feature from working dir", _
+                        "Given the current working dir is ""/Users/cuke/source/senfgurke""", _
+                        "When the location for features is set", _
+                        "Then the feature dir is set to ""/Users/cuke/source/senfgurke/features""")
     examples_list.Add example
+    
+    example = Array("Rule: return error message if feature files are not accessible")
+    example = Array("Example: feature dir is unavailable", _
+                        "Given feature dir is set to ""/this/path/does/not/exist/features""", _
+                        "When senfgurke imports features", _
+                        "Then the import returns an error message ""can't access feature dir ><""")
+    examples_list.Add example
+    
     Set Examples = examples_list
 End Property
 
@@ -85,3 +90,5 @@ End Sub
 Public Property Let Description(ByVal new_description As String)
     m_description = new_description
 End Property
+
+
