--- a/step_definitions/Steps_Import_Feature_Files.cls
+++ b/step_definitions/Steps_Import_Feature_Files.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "Feature_Run_Tests"
+Attribute VB_Name = "Steps_Import_Feature_Files"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -16,8 +16,8 @@ Dim m_description As String
 Public Property Get Description() As String
     
     If m_description = vbNullString Then
-        m_description = "The main purpose of senfgurke is to run tests containing" & vbLf _
-                            & "numerous examples used to describe distinct features."
+        m_description = "Senfgurke will import examples from feature files" & vbLf _
+                            & "containing feature name and descripion, rules and examples as text."
     End If
     Description = m_description
 End Property
@@ -29,14 +29,21 @@ Public Property Get Examples() As Collection
     Dim example As Variant
 
     Set examples_list = New Collection
-    example = Array("Rule: stop execution when the import of feature files fails")
+    example = Array("Rule: use the features dir beneath the current dir of the document containing the step implementation")
     examples_list.Add example
-'    example = Array("Example: import results with error message", _
-'                        "Given ", _
-'                        "When  ", _
-'                        "Then  ")
-'    examples_list.Add example
-
+    example = Array("Example: derive feature from working dir", _
+                        "Given the current working dir is ""/Users/cuke/source/senfgurke""", _
+                        "When the location for features is set", _
+                        "Then the feature dir is set to ""/Users/cuke/source/senfgurke/features""")
+    examples_list.Add example
+    
+    example = Array("Rule: return error message if feature files are not accessible")
+    example = Array("Example: feature dir is unavailable", _
+                        "Given feature dir is set to ""/this/path/does/not/exist/features""", _
+                        "When senfgurke imports features", _
+                        "Then the import returns an error message ""can't access feature dir ><""")
+    examples_list.Add example
+    
     Set Examples = examples_list
 End Property
 
@@ -83,7 +90,5 @@ End Sub
 Public Property Let Description(ByVal new_description As String)
     m_description = new_description
 End Property
-
-
 
 
