[chore] add step definitions class for parsing features

--- a/step_definitions/Steps_Parse_Features.cls
+++ b/step_definitions/Steps_Parse_Features.cls
@@ -13,6 +13,8 @@ Option Explicit
 Const cTags = ""
 Dim m_description As String
 
+'module variables used for steps
+Dim m_feature_text As String
 Dim m_example As Variant
 Dim m_step_attributes As Collection
 
@@ -32,43 +34,49 @@ Public Property Get Examples() As Collection
     Dim example As Variant
 
     Set examples_list = New Collection
-    example = Array("Rule: skip features not starting with the a feature keyword otherwise create a new feature")
+    example = Array("Rule: parse features spec only if it's starting with ""Feature:"" keyword or synonyms or has preceding tags")
     examples_list.Add example
-    example = Array("Example: invalid feature spec", _
-                        "Given a precondition", _
-                        "And another precondition", _
-                        "When any action happens", _
-                        "Then some result is expected")
-    examples_list.Add example
-    example = Array("Example: feature starts with Ability:", _
-                        "Given a precondition", _
-                        "And another precondition", _
-                        "When any action happens", _
-                        "Then some result is expected")
+    example = Array("Example: feature spec without feature keyword", _
+                        "Given feature ""this is just some text <br> without a feature keyword""", _
+                        "When the feature is parsed", _
+                        "Then the parsing results in the error message ""Feature lacks feature keyword at the beginning""")
     examples_list.Add example
     
-    example = Array("Rule: ignore trailing white space")
+'    example = Array("Rule: translate synonyms ""Ability,Business Needs"" to ""Feature""")
+'    examples_list.Add example
+'    example = Array("Example: feature starts with Ability:", _
+'                        "Given a precondition", _
+'                        "And another precondition", _
+'                        "When any action happens", _
+'                        "Then some result is expected")
+'    examples_list.Add example
     
-    example = Array("Rule: Steps not starting with Given, When, Then or And will produce a Gherkin syntax error")
-    examples_list.Add example
-    example = Array("Example: missing step type", _
-                        "Given an example with a step ""bla bla bla""", _
-                        "When the step is read", _
-                        "Then the step result is an Gherkin Syntax Error claiming ""bla"" is not a valid step type")
-    examples_list.Add example
-    
-    example = Array("Rule: ""And"" and ""But"" are used as a synonym for the previous step type Given, When or Then")
-    examples_list.Add example
-    example = Array("Example: And as synonym for Given", _
-                        "Given an example with two steps ""Given x is 1"" and ""And y is 2""", _
-                        "When the second step is read", _
-                        "Then the step type is set to ""Given""")
-    examples_list.Add example
-    example = Array("Example: But as synonym for When", _
-                        "Given an example with two steps ""When some action happens"" and ""But it doesn't matter""", _
-                        "When the second step is read", _
-                        "Then the step type is set to ""When""")
-    examples_list.Add example
+'    example = Array("Rule: ignore trailing white space")
+'    examples_list.Add example
+'
+'    example = Array("Rule: Steps not starting with Given, When, Then or And will produce a Gherkin syntax error")
+'    examples_list.Add example
+'    example = Array("Example: missing step type", _
+'                        "Given an example with a step ""bla bla bla""", _
+'                        "When the step is read", _
+'                        "Then the step result is an Gherkin Syntax Error claiming ""bla"" is not a valid step type")
+'    examples_list.Add example
+'
+'    example = Array("Rule: Translate ""And"" and ""But"" Given, When or Then using the same keyword as the previous step")
+'    examples_list.Add example
+'    example = Array("Example: And as synonym for Given", _
+'                        "Given an example with two steps ""Given x is 1"" and ""And y is 2""", _
+'                        "When the second step is read", _
+'                        "Then the step type is set to ""Given""")
+'    examples_list.Add example
+'    example = Array("Example: But as synonym for When", _
+'                        "Given an example with two steps ""When some action happens"" and ""But it doesn't matter""", _
+'                        "When the second step is read", _
+'                        "Then the step type is set to ""When""")
+'    examples_list.Add example
+'
+'    example = Array("Rule: Translate ""Ability"" and ""Business Need"" to feature")
+'    examples_list.Add example
     
     Set Examples = examples_list
 End Property
@@ -78,6 +86,9 @@ Public Function run_step(pcolStepProps As Collection) As Variant
     On Error GoTo error_handler
     
     Select Case pcolStepProps.Item(TExampleRunner.ATTR_STEP_HEAD) & " " & pcolStepProps.Item(TExampleRunner.ATTR_STEP_BODY)
+        
+        Case "Given feature ""this is just some text <br> without a feature keyword"""
+            m_feature_text = Replace("this is just some text <br> without a feature keyword", " <br> ", vbLf)
         
         Case "Given an example with a step ""bla bla bla"""
             m_example = Array("Example: Gherkin syntax error", _
@@ -93,6 +104,9 @@ Public Function run_step(pcolStepProps As Collection) As Variant
                                 "When some action happens", _
                                 "But it doesn't matter")
             
+        Case "When the feature is parsed"
+            pending "parse feature text"
+        
         Case "When the step is read"
             Set m_step_attributes = TExampleRunner.read_step(m_example, 1)
         
